--- a/examples/Example3.ipynb
+++ b/examples/Example3.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Preparation\n",
     "\n",
-    "To run this notebook, Carol would need the Wikidata edges file. We will work with the Wikidata file we extracted in `Example2` for Bob."
+    "To run this notebook, Carol would need the Wikidata edges file. We will work with the Wikidata file we downloaded and unpacked in `Example2` for Bob."
    ]
   },
   {
@@ -29,13 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "    kgtk filter -p ' ;  P31 ; Q5' wikidata_edges_20200504.tsv > people.tsv\n",
-    "    kgtk filter -p ' ;  ; Q30' wikidata_edges_20200504.tsv > usa.tsv"
+    "kgtk filter -p ' ; P279 ; ' wikidata_edges_20200504.tsv > subclass.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "kgtk filter -p ' Q8023,Q483203,Q1426 ;  P106 ; ' wikidata_edges_20200504.tsv > people.tsv\n"
    ]
   },
   {
@@ -47,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk zconcat -o merged.tsv people.tsv usa.tsv "
+    "kgtk cat people.tsv subclass.tsv / newsort -c \"node1\" -o cat.tsv"
    ]
   },
   {
@@ -69,22 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk sort -c \"node1,label\" merged.tsv > cat.tsv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "kgtk reachable_nodes cat.tsv --subj 1 --pred 2 --obj 3 --props P31,P279 --root Q1001698 > cat2.tsv"
+    "kgtk reachable_nodes cat.tsv --subj 1 --pred 2 --obj 3 --props P31,P279 --root \"Q1001698, Q5\" > reachable.tsv"
    ]
   },
   {
