--- a/examples/Example1.ipynb
+++ b/examples/Example1.ipynb
@@ -53,7 +53,8 @@
    "source": [
     "%%bash\n",
     "kgtk import_conceptnet --english_only examples/conceptnet-assertions-5.7.0.csv / \\\n",
-    "            filter -p \" ; /r/Causes,/r/UsedFor,/r/Synonym,/r/DefinedAs,/r/IsA ; \" > tmp.tsv"
+    "            filter -p \" ; /r/Causes,/r/UsedFor,/r/Synonym,/r/DefinedAs,/r/IsA ; \" / \\\n",
+    "            sort -c 1,2,3 -o sorted.tsv tmp.tsv"
    ]
   },
   {
