--- a/examples/Example1 - Embeddings.ipynb
+++ b/examples/Example1 - Embeddings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example Scenario 1: Obtaining embeddings for strong relations\n",
+    "# Example Scenario 1: Generating embeddings for ConceptNet nodes\n",
     "\n",
     "*Alice wishes to import the English subset of ConceptNet in KGTK format. Then, she would extract a subset of ConceptNet where two concepts are connected with a precise semantic relation, like `Causes` or `UsedFor` (as opposed to weaker relations like `/r/RelatedTo`). Text embeddings would be computed for all nodes in this subset, and saved in a file called `emb.txt`.*"
    ]
@@ -61,7 +61,7 @@
     "%%bash\n",
     "kgtk import_conceptnet --english_only conceptnet-assertions-5.7.0.csv / \\\n",
     "            filter -p \" ; /r/Causes,/r/UsedFor,/r/Synonym,/r/DefinedAs,/r/IsA ; \" > tmp.tsv\n",
-    "kgtk newsort -c 1,2,3 -o sorted.tsv tmp.tsv"
+    "kgtk newsort -c 1,2,3 tmp.tsv > sorted.tsv"
    ]
   },
   {
