--- a/examples/Example2 - Curation and Statistics.ipynb
+++ b/examples/Example2 - Curation and Statistics.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Example Scenario 2: Validation and statistics on a subset of Wikidata\n",
     "\n",
-    "*Bob wants to extract a subset of Wikidata with the `instanceof (P31)`  property, validate it, and compute  its statistics, including  centrality metrics.*"
+    "*Bob wants to extract a subset of Wikidata with the `employer (P108)` or `position held (P39)` properties, validate it, and compute  its statistics, including centrality metrics.*"
    ]
   },
   {
@@ -60,30 +60,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: obsolete=id,rank,node2;magnitude,node2;unit,node2;item,node2;lower,node2;upper,node2;entity-type,node2;longitude,node2;latitude,node2;date,node2;calendar,node2;precision\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "kgtk filter -p ' ; P463 ; ' wikidata_edges_20200504.tsv > p463.tsv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%env ignore_cols=id,rank,node2;magnitude,node2;unit,node2;item,node2;lower,node2;upper,node2;entity-type,node2;longitude,node2;latitude,node2;date,node2;calendar,node2;precision"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "head -1000000 wikidata_edges_20200504.tsv | kgtk clean_data --error-limit 0 / \\\n",
-    "    remove_columns -c \"$ignore_cols\" / filter -p ' ; P31 ; ' > graph.tsv"
+    "kgtk clean_data --error-limit 0 p463.tsv / \\\n",
+    "    remove_columns -c \"$ignore_cols\" /  > graph.tsv"
    ]
   },
   {
