--- a/examples/Example3 - Reachability.ipynb
+++ b/examples/Example3 - Reachability.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example Scenario 1: Obtaining embeddings for strong relations\n",
+    "# Example Scenario 3: Reachable occupations for selected people in Wikidata\n",
     "\n",
     "*Carol would like to combine two subsets of Wikidata: one containing all subclass relations, and the other containing occuppations for several notable people. The combined  file  needs to be sorted by subject, after which she would compute the set of reachable nodes for those people via the properties `occupation (P106)` or `subclass of (P279)`.*"
    ]
