--- a/examples/Example2 - Curation and Statistics.ipynb
+++ b/examples/Example2 - Curation and Statistics.ipynb
@@ -83,29 +83,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kgtk clean_data --error-limit 0 p463.tsv / \\\n",
-    "    remove_columns -c \"$ignore_cols\" /  > graph.tsv"
+    "%%bash\n",
+    "kgtk clean_data --error-limit 0 p463.tsv  / remove_columns -c \"$ignore_cols\" | grep . > graph.tsv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk graph_statistics --directed --degrees --pagerank graph.tsv > stats.tsv"
+    "kgtk graph_statistics --directed --degrees --pagerank --log p463_summary.txt graph.tsv > p463_stats.tsv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Issues\n",
-    "\n",
-    "* import of wikidata file to kgtk\n",
-    "* add the file somewhere downloadable\n",
-    "* clean_data fails on the full file"
+    "You can now inspect the individual node metrics in `p463_stats` or read the summary in `p463_summary.txt`."
    ]
   },
   {
