added a comment on the output in ex2

--- a/examples/Example2 - Curation and Statistics.ipynb
+++ b/examples/Example2 - Curation and Statistics.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can now inspect the individual node metrics in `p463_stats` or read the summary in `p463_summary.txt`."
+    "You can now inspect the individual node metrics in `p463_stats` or read the summary in `p463_summary.txt`.\n",
+    "\n",
+    "For example, we learn that the mean degree is 2.45 and that the node with a highest PageRank is ORCID, Inc. (`Q19861084`)."
    ]
   },
   {
