--- a/examples/Example2 - Curation and Statistics.ipynb
+++ b/examples/Example2 - Curation and Statistics.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Preparation\n",
     "\n",
-    "To run this notebook, Bob would need the Wikidata edges file. We will work with version ` ` of Wikidata. Presumably, this file is not present on Bob's laptop, so we need to download and unpack it first (note: mac users might need to install `wget` first: `brew install wget`):"
+    "To run this notebook, Bob would need the Wikidata edges file. We will work with version `20200405` of Wikidata. Presumably, this file is not present on Bob's laptop, so we need to download and unpack it first (note: mac users might need to install `wget` first: `brew install wget`):"
    ]
   },
   {
@@ -42,11 +42,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here we assume that the Wikidata file has already been transformed to KGTK format."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Alternatively, you can download the Wikidata json.bz2 file and then use the command \n",
     "\n",
     "`kgtk import_wikidata -i wikidata-20200504-all.json.bz2 --node wikidata_nodes_20200504.tsv --edge wikidata_edges_20200504.tsv -qual wikidata_qualifiers_20200504.tsv`\n",
     "\n",
-    "This takes 11 hours."
+    "This takes around 11 hours."
    ]
   },
   {
@@ -55,7 +62,7 @@
    "source": [
     "## Implementation in KGTK\n",
     "\n",
-    "**Assume that the Wikidata file has already been transformed to KGTK format.**"
+    "We filter the data for all `P463` relations."
    ]
   },
   {
@@ -66,6 +73,13 @@
    "source": [
     "%%bash\n",
     "kgtk filter -p ' ; P463 ; ' wikidata_edges_20200504.tsv > p463.tsv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we clean it and remove columns that are not relevant for this use case:"
    ]
   },
   {
@@ -85,6 +99,13 @@
    "source": [
     "%%bash\n",
     "kgtk clean_data --error-limit 0 p463.tsv  / remove_columns -c \"$ignore_cols\" | grep . > graph.tsv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we compute graph statistics:"
    ]
   },
   {
