--- a/examples/Example1 - Embeddings.ipynb
+++ b/examples/Example1 - Embeddings.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Separate sort"
+    "We will select the relevant edges from ConceptNet and sort them:"
    ]
   },
   {
@@ -61,33 +61,39 @@
     "%%bash\n",
     "kgtk import_conceptnet --english_only conceptnet-assertions-5.7.0.csv / \\\n",
     "            filter -p \" ; /r/Causes,/r/UsedFor,/r/Synonym,/r/DefinedAs,/r/IsA ; \" > tmp.tsv\n",
-    "kgtk newsort -c 1,2,3 tmp.tsv > sorted.tsv"
+    "kgtk sort -c 1,2,3 tmp.tsv > sorted.tsv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sort together"
+    "For demonstration purposes, let's compute embeddings based on the first 30k edges."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%bash\n",
-    "# kgtk import_conceptnet --english_only conceptnet-assertions-5.7.0.csv / \\\n",
-    "#             filter -p \" ; /r/Causes,/r/UsedFor,/r/Synonym,/r/DefinedAs,/r/IsA ; \" / \\\n",
-    "#             newsort -c 1,2,3 -o sorted.tsv #tmp.tsv"
+    "%%bash\n",
+    "head -30000 sorted.tsv > sorted30k.tsv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 19570/19570 [30:39<00:00, 10.64it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "kgtk text_embedding --debug --embedding-projector-metadata-path none \\\n",
@@ -100,18 +106,9 @@
     "                    -f kgtk_format \\\n",
     "                    --output-format kgtk_format \\\n",
     "                    --use-cache \\\n",
-    "                    --model bert-large-nli-cls-token -i sorted.tsv > emb.txt\n",
-    "                    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Remarks\n",
-    "\n",
-    "* sort does not work with pipes\n",
-    "* embeddings use unnatural relations"
+    "                    --model bert-large-nli-cls-token \\\n",
+    "                    -i sorted30k.tsv \\\n",
+    "                    > emb.txt                    "
    ]
   },
   {
