--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -17,34 +17,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To start with, please download the provided subset of the CSKG graph:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "wget ..."
+    "As a preparation for this notebook:\n",
+    "* please download a subset of the CSKG graph provided [here]()\n",
+    "* place it in the same directory as this notebook"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Computing statistics over the graph"
+    "## Computing statistics over the graph\n",
+    "\n",
+    "Let's compute graph statistics: degrees, PageRank and HITS centrality, and other general graph descriptors."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk graph_statistics --directed --degrees --pagerank --log cskg_summary.txt cskg_sample.tsv > cskg_stats.tsv"
+    "kgtk graph_statistics --directed --degrees --pagerank --hits --log cskg_summary.txt cskg_sample.tsv > cskg_stats.tsv"
    ]
   },
   {
@@ -53,7 +47,7 @@
    "source": [
     "### Inspecting the output\n",
     "\n",
-    "This command has computed individual degree numbers and PageRank values for all nodes in `cskg_stats.tsv`. Here are the last 10 lines of the file:"
+    "This command has computed individual degree numbers, HITS hubs and authority values, and PageRank for all nodes in `cskg_stats.tsv`. Here are the last 10 lines of the file:"
    ]
   },
   {
