--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -52,9 +52,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_in_degree\t0\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_in_degree-128480\n",
+      "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_out_degree\t1\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_out_degree-128481\n",
+      "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_pagerank\t2.549315124598274e-05\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_pagerank-128482\n",
+      "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_hubs\t0.0\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_hubs-128483\n",
+      "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_auth\t2.9904158236518235e-249\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_auth-128484\n",
+      "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_in_degree\t1\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_in_degree-128485\n",
+      "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_out_degree\t0\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_out_degree-128486\n",
+      "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_pagerank\t4.716231030577361e-05\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_pagerank-128487\n",
+      "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_hubs\t9.592664809864095e-248\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_hubs-128488\n",
+      "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_auth\t0.0\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_auth-128489\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "tail cskg_stats.tsv"
@@ -69,9 +86,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading the TSV graph now ...\n",
+      "graph loaded! It has 25698 nodes and 17324 edges\n",
+      "\n",
+      "###Top relations:\n",
+      "/r/RelatedTo\t4552\n",
+      "rdfs:subClassOf\t3154\n",
+      "vg:InImage\t2996\n",
+      "/r/Synonym\t1499\n",
+      "mw:PartOfSpeech\t818\n",
+      "mw:POSForm\t444\n",
+      "/r/Antonym\t439\n",
+      "mw:IsPOSFormOf\t438\n",
+      "/r/FormOf\t340\n",
+      "/r/DerivedFrom\t330\n",
+      "\n",
+      "###Degrees:\n",
+      "in degree stats: mean=0.674138, std=0.060724, max=1\n",
+      "out degree stats: mean=0.674138, std=0.010146, max=1\n",
+      "total degree stats: mean=1.348276, std=0.061462, max=1\n",
+      "\n",
+      "###PageRank\n",
+      "Max pageranks\n",
+      "29\tmw:Verb\t0.002626\n",
+      "33\tmw:Noun\t0.012193\n",
+      "22231\twd:Q8054+/c/en/polypeptide/n/wn/substance+wn:polypeptide.n.01\t0.019311\n",
+      "21928\twd:Q20747295\t0.022323\n",
+      "22314\twd:Q7187\t0.010448\n",
+      "\n",
+      "###HITS\n",
+      "HITS hubs\n",
+      "15713\tvg:I2371025\t0.000000\n",
+      "22314\twd:Q7187\t0.000000\n",
+      "33\tmw:Noun\t0.000000\n",
+      "22231\twd:Q8054+/c/en/polypeptide/n/wn/substance+wn:polypeptide.n.01\t0.000007\n",
+      "21928\twd:Q20747295\t1.000000\n",
+      "HITS auth\n",
+      "24876\twd:Q62473855\t0.031174\n",
+      "24875\twd:Q62469413\t0.031174\n",
+      "24880\twd:Q62525750\t0.031174\n",
+      "24879\twd:Q62525621\t0.031174\n",
+      "21947\twd:Q15322928\t0.031174\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cat cskg_summary.txt"
@@ -125,13 +190,6 @@
    "source": [
     "You can now inspect the embeddings in `cskg_embeddings.txt`."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
