--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "As a preparation for this notebook:\n",
-    "* please download a subset of the CSKG graph provided [here]()\n",
+    "* please download a subset of the CSKG graph provided [here](https://drive.google.com/file/d/14rDtnklGF2fH23-GJDWAS7pKc88UFvHw/view?usp=sharing)\n",
     "* place it in the same directory as this notebook"
    ]
   },
