--- a/examples/Example2 - Curation and Statistics.ipynb
+++ b/examples/Example2 - Curation and Statistics.ipynb
@@ -6,54 +6,22 @@
    "source": [
     "# Example Scenario 2: Validation and statistics on a subset of Wikidata\n",
     "\n",
-    "*Bob wants to extract a subset of Wikidata with the `employer (P108)` or `position held (P39)` properties, validate it, and compute  its statistics, including centrality metrics.*"
+    "*Bob wants to extract a subset of Wikidata with the `member of (P463)` property, clean it, remove irrelevant columns (for this task), and compute its statistics, including centrality metrics.*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preparation\n",
+    "## Preparation (same as in Example 3)\n",
     "\n",
-    "To run this notebook, Bob would need the Wikidata edges file. We will work with version `20200405` of Wikidata. Presumably, this file is not present on Bob's laptop, so we need to download and unpack it first (note: mac users might need to install `wget` first: `brew install wget`):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "wget ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "gunzip wikidata_edges_20200504.tsv.gz"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we assume that the Wikidata file has already been transformed to KGTK format."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Alternatively, you can download the Wikidata json.bz2 file and then use the command \n",
+    "To run this notebook, Bob would need the Wikidata edges file. We will work with version `20200405` of Wikidata. Presumably, this file is not present on Bob's laptop, so we need to download and unpack it first:\n",
+    "* please download the file [here](https://drive.google.com/file/d/1WIQIYXJC1IdSlPchtqz0NDr2zEEOz-Hb/view?usp=sharing)\n",
+    "* unpack it by running : `gunzip wikidata_edges_20200504.tsv.gz`\n",
     "\n",
-    "`kgtk import_wikidata -i wikidata-20200504-all.json.bz2 --node wikidata_nodes_20200504.tsv --edge wikidata_edges_20200504.tsv -qual wikidata_qualifiers_20200504.tsv`\n",
+    "You are all set!\n",
     "\n",
-    "This takes around 11 hours."
+    "*Note*: Here we assume that the Wikidata file has already been transformed to KGTK format from Wikidata's `json.bz2` dump. This can be done with the following KGTK command (for demonstration purposes, we will skip this command, as its execution takes around 11 hours): `kgtk import_wikidata -i wikidata-20200504-all.json.bz2 --node wikidata_nodes_20200504.tsv --edge wikidata_edges_20200504.tsv -qual wikidata_qualifiers_20200504.tsv`"
    ]
   },
   {
@@ -126,13 +94,6 @@
     "\n",
     "For example, we learn that the mean degree is 2.45 and that the node with a highest PageRank is ORCID, Inc. (`Q19861084`)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
