--- a/examples/Example3 - Reachability.ipynb
+++ b/examples/Example3 - Reachability.ipynb
@@ -13,9 +13,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparation\n",
+    "## Preparation (same as in Example 2)\n",
     "\n",
-    "To run this notebook, Carol would need the Wikidata edges file. We will work with the Wikidata file we downloaded and unpacked in `Example2` for Bob."
+    "To run this notebook, Carol would need the Wikidata edges file. We will work with version `20200405` of Wikidata. Presumably, this file is not present on Carol's laptop, so we need to download and unpack it first:\n",
+    "* please download the file [here](https://drive.google.com/file/d/1WIQIYXJC1IdSlPchtqz0NDr2zEEOz-Hb/view?usp=sharing)\n",
+    "* unpack it by running : `gunzip wikidata_edges_20200504.tsv.gz`\n",
+    "\n",
+    "You are all set!\n",
+    "\n",
+    "*Note*: Here we assume that the Wikidata file has already been transformed to KGTK format from Wikidata's `json.bz2` dump. This can be done with the following KGTK command (for demonstration purposes, we will skip this command, as its execution takes around 11 hours): `kgtk import_wikidata -i wikidata-20200504-all.json.bz2 --node wikidata_nodes_20200504.tsv --edge wikidata_edges_20200504.tsv -qual wikidata_qualifiers_20200504.tsv`"
    ]
   },
   {
@@ -56,12 +62,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk cat people.tsv subclass.tsv / newsort -c \"node1\" -o cat.tsv"
+    "kgtk cat people.tsv subclass.tsv / sort -c \"node1\" -o cat.tsv"
    ]
   },
   {
