notebook for example 3 updated with output inspection

--- a/examples/Example3 - Reachability.ipynb
+++ b/examples/Example3 - Reachability.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,12 +72,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "kgtk reachable_nodes cat.tsv --subj 1 --pred 2 --obj 3 --props P106,P279 --root \"Q8023,Q483203,Q1426\"  -o reachable.tsv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now inspect the output:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node1\tlabel\tnode2\n",
+      "Q483203\treachable\tQ33999\n",
+      "Q483203\treachable\tQ483501\n",
+      "Q483203\treachable\tQ2500638\n",
+      "Q483203\treachable\tQ215627\n",
+      "Q483203\treachable\tQ830077\n",
+      "Q483203\treachable\tQ35120\n",
+      "Q483203\treachable\tQ24229398\n",
+      "Q483203\treachable\tQ23958946\n",
+      "Q483203\treachable\tQ18336849\n",
+      "Q483203\treachable\tQ795052\n",
+      "Q483203\treachable\tQ488205\n",
+      "Q483203\treachable\tQ177220\n",
+      "Q483203\treachable\tQ2643890\n",
+      "Q483203\treachable\tQ639669\n",
+      "Q483203\treachable\tQ753110\n",
+      "Q483203\treachable\tQ28771895\n",
+      "Q483203\treachable\tQ36834\n",
+      "Q483203\treachable\tQ482980\n",
+      "Q483203\treachable\tQ584301\n",
+      "Q483203\treachable\tQ1278335\n",
+      "Q483203\treachable\tQ855091\n",
+      "Q483203\treachable\tQ21166956\n",
+      "Q483203\treachable\tQ10800557\n",
+      "Q483203\treachable\tQ183945\n",
+      "Q483203\treachable\tQ13235160\n",
+      "Q483203\treachable\tQ131524\n",
+      "Q483203\treachable\tQ43845\n",
+      "Q483203\treachable\tQ702269\n",
+      "Q483203\treachable\tQ327055\n",
+      "Q483203\treachable\tQ128124\n",
+      "Q483203\treachable\tQ81096\n",
+      "Q8023\treachable\tQ82955\n",
+      "Q8023\treachable\tQ702269\n",
+      "Q8023\treachable\tQ327055\n",
+      "Q8023\treachable\tQ215627\n",
+      "Q8023\treachable\tQ830077\n",
+      "Q8023\treachable\tQ35120\n",
+      "Q8023\treachable\tQ24229398\n",
+      "Q8023\treachable\tQ23958946\n",
+      "Q8023\treachable\tQ18336849\n",
+      "Q8023\treachable\tQ795052\n",
+      "Q8023\treachable\tQ18814623\n",
+      "Q8023\treachable\tQ864380\n",
+      "Q8023\treachable\tQ15980158\n",
+      "Q8023\treachable\tQ36180\n",
+      "Q8023\treachable\tQ482980\n",
+      "Q8023\treachable\tQ2500638\n",
+      "Q8023\treachable\tQ40348\n",
+      "Q8023\treachable\tQ185351\n",
+      "Q8023\treachable\tQ57735705\n",
+      "Q8023\treachable\tQ11499147\n",
+      "Q8023\treachable\tQ15253558\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cat reachable.tsv"
    ]
   },
   {
