example notebooks updated

--- a/examples/Example1 - Embeddings.ipynb
+++ b/examples/Example1 - Embeddings.ipynb
@@ -54,14 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "kgtk import_conceptnet --english_only conceptnet-assertions-5.7.0.csv / \\\n",
-    "            filter -p \" ; /r/Causes,/r/UsedFor,/r/Synonym,/r/DefinedAs,/r/IsA ; \" > tmp.tsv\n",
-    "kgtk sort -c 1,2,3 tmp.tsv > sorted.tsv"
+    "            filter -p \" ; /r/Causes,/r/UsedFor,/r/Synonym,/r/DefinedAs,/r/IsA ; \" / sort -c 1,2,3 \\\n",
+    "            > sorted.tsv"
    ]
   },
   {
