--- a/examples/Example3 - Reachability.ipynb
+++ b/examples/Example3 - Reachability.ipynb
@@ -62,22 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk cat people.tsv subclass.tsv / sort -c \"node1\" -o cat.tsv"
+    "kgtk cat people.tsv subclass.tsv / sort -c \"node1\" > cat.tsv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk reachable_nodes cat.tsv --subj 1 --pred 2 --obj 3 --props P106,P279 --root \"Q8023,Q483203,Q1426\"  -o reachable.tsv"
+    "kgtk reachable_nodes --subj 1 --pred 2 --obj 3 --props P106,P279 --root \"Q8023,Q483203,Q1426\" cat.tsv > reachable.tsv"
    ]
   },
   {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +97,18 @@
      "output_type": "stream",
      "text": [
       "node1\tlabel\tnode2\n",
+      "Q1426\treachable\tQ10833314\n",
+      "Q1426\treachable\tQ2066131\n",
+      "Q1426\treachable\tQ50995749\n",
+      "Q1426\treachable\tQ215627\n",
+      "Q1426\treachable\tQ830077\n",
+      "Q1426\treachable\tQ35120\n",
+      "Q1426\treachable\tQ24229398\n",
+      "Q1426\treachable\tQ23958946\n",
+      "Q1426\treachable\tQ18336849\n",
+      "Q1426\treachable\tQ795052\n",
+      "Q1426\treachable\tQ18536342\n",
+      "Q1426\treachable\tQ4197743\n",
       "Q483203\treachable\tQ33999\n",
       "Q483203\treachable\tQ483501\n",
       "Q483203\treachable\tQ2500638\n",
